<resources>
    <string name="app_name">COVID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COVID-19</string>
    <string name="nav_header_subtitle">yancamilo8@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Países</string>
    <string name="menu_gallery">Cuidados</string>
    <string name="menu_slideshow">Notícias</string>
    <string name="menu_tools">Contato</string>
    <string name="menu_share">Sobre</string>
    <string name="menu_send">Enviar Para Amigos</string>
</resources>
