<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.yan.covid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_pais" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="net.yan.covid.ui.cuidados.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_cuidados" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="net.yan.covid.ui.noticias.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="net.yan.covid.ui.contatos.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_share"
        android:name="net.yan.covid.ui.sobre.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_sobre" />

    <fragment
        android:id="@+id/nav_send"
        android:name="net.yan.covid.ui.enviar.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_enviar" />
</navigation>